--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,13 @@
 # Tinyproxy configuration
 PROXY_PORT=8888
-ADMIN_PORT=8080
-METRICS_PORT=9240
 TIMEZONE=UTC
 
 # Access control settings
 ALLOWED_CLIENTS=*
-ADMIN_USER=xxx
-ADMIN_PASSWORD=xxx
 
 # Proxy authentication
-PROXY_USER=xxx
-PROXY_PASSWORD=xxx
+PROXY_USER=proxyuser
+PROXY_PASSWORD=your_secure_password
 
 # Proxy settings
 ENABLE_FILTER=true
