--- a/config/tinyproxy.conf
+++ b/config/tinyproxy.conf
@@ -267,6 +267,7 @@ ViaProxyName "tinyproxy"
 #
 ConnectPort 443
 ConnectPort 563
+ConnectPort 21211
 
 #
 # Configure one or more ReversePath directives to enable reverse proxy
