--- a/config/tinyproxy.conf
+++ b/config/tinyproxy.conf
@@ -181,10 +181,10 @@ MaxRequestsPerChild 0
 # The order of the controls are important. All incoming connections are
 # tested against the controls based on order.
 #
-Allow 127.0.0.1
-Allow 192.168.0.0/16
-Allow 10.0.0.0/8
-Allow 172.16.0.0/12
+#Allow 127.0.0.1
+#Allow 192.168.0.0/16
+#Allow 10.0.0.0/8
+#Allow 172.16.0.0/12
 
 #
 # AddHeader: Adds the specified headers to outgoing HTTP requests that
@@ -268,6 +268,7 @@ ViaProxyName "tinyproxy"
 ConnectPort 443
 ConnectPort 563
 ConnectPort 21211
+ConnectPort 0
 
 #
 # Configure one or more ReversePath directives to enable reverse proxy
